# gaupa

./: app.py  pyproject.toml  readme.md
test/: test_gaupa.py
